--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
       </div>
     </div>
 
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Caleb John</a>.
-  </div>
+  </div> -->
 </body>
 
 </html>
