--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -83,7 +82,7 @@
 
   
   
-    <div class="card">
+    <div class="card" role="article">
       <img src="./images/image-qr-code.png" alt="qr-code">
       <div class="content">
         <h3>
