--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     .card{
       padding: 16px 16px 40px 16px ;
-      background-color: #fafafa;
+      background-color: #ffffff;
       width: fit-content;
       border-radius: 20px;
       width: 320px;
