--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     .content > p{
       color:#68778D;
-      font-weight: 15px;
+      font-size: 15px;
       line-height: 21px;
       font-family: Outfit;
       font-weight: 400;
